[project]
name = "django-ulidfield"
version = "0.1.0"
description = "A drop-in Django model field for storing sortable, time-encoded ULIDs as 26-character strings."
authors = [
    {name = "Christian Gonzalez",email = "christiangonzalezblack@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-ulid (>=3.0.0,<4.0.0)",
    "django (>=4.2,<5.3)"
]

[tool.poetry]
packages = [{include = "django_ulidfield", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
